minor code style clean up